[package]
name = "learn_sandbox_proto"
version = "0.1.0"
edition = "2021"
default-run = "learn_sandbox_proto"

[dependencies]
bevy = "0.11.2"
leafwing-input-manager = "0.10.0"
bevy_xpbd_2d = "0.2.0"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
bevy = {version = "0.11.2", features = ["dynamic_linking"]}

[target.wasm32-unknown-unknown.dependencies]
bevy = {version = "0.11.2", features = []}

## Enable a small amount of optimization in debug mode
#[profile.dev]
#opt-level = 1
#
## Enable high optimizations for dependencies (incl. Bevy), but not for our code:
#[profile.dev.package."*"]
#opt-level = 3
