[package]
name = "learn_sandbox_proto"
version = "0.1.0"
edition = "2021"
default-run = "learn_sandbox_proto"

[dependencies]
bevy = "0.12.1"
leafwing-input-manager = "0.11.2"
bevy_xpbd_2d = "0.3.2"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
bevy = {version = "0.12.1", features = ["dynamic_linking"]}

[target.wasm32-unknown-unknown.dependencies]
bevy = {version = "0.12.1", features = []}

## Enable a small amount of optimization in debug mode
#[profile.dev]
#opt-level = 1
#
## Enable high optimizations for dependencies (incl. Bevy), but not for our code:
#[profile.dev.package."*"]
#opt-level = 3
